workspace = { members = ["examples/gui"] }
[package]
name = "libtesla-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
nx = { git = "https://github.com/aarch64-switch-rs/nx", features = [ "gpu", "input" ] }
bitfield-struct ={ version = "0.6.1"}

[dependencies.font8x8]
version = "0.3.1"
default-features = false
features = ["unicode"]

[dependencies.rusttype]
version = "0.9.3"
default-features = false
features = ["libm-math"]

[dependencies.libm]
version = "0.2.8"
default-features = false
features = []
